--- a/tabulator.css
+++ b/tabulator.css
@@ -8,8 +8,12 @@ body {
 	font-size: 16px;
 	line-height: 1.4;
 }
+.selected{
+	background-color: #5bc0de;
+}
 th{
-	width:50%;
+	table-layout: fixed;
+	width:40%;
 	font-weight: inherit;
 
 }
