--- a/Scripts/ui-tree/angular-ui-tree.css
+++ b/Scripts/ui-tree/angular-ui-tree.css
@@ -30,6 +30,7 @@
     padding: 0;
     min-height: 20px;
     line-height: 20px;
+
 }
 
 .angular-ui-tree-hidden {
@@ -39,7 +40,9 @@
 .angular-ui-tree-placeholder {
     margin: 5px 0;
     padding: 0;
-    min-height: 30px;
+    min-height: 1px;
+    max-height: 1px;
+    background-color: #2e6da4;
 }
 
 .angular-ui-tree-handle {
